--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,9 @@
 {
+    
+    "defaultValidation":"هذا الحقل مطلوب",
+    "passwordValidation":"من فضلك قم بادخال كلمة السر'",
+    "trueEmailValidation":"من فضلك قم بادخال بريد الكتروني صحيح",
+    "emailValidation":"من فضلك قم بادخال بريد الكتروني",
     "hello":"مرحباً",
     "alsalamealaykum": "السلام عليكم ورحمه الله وبركاته عيد فطر مبارك علينا وعليكم",
     "Admin": "أدمن سرعة التسويق",
