tr auth feature

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,10 +1,20 @@
 {
-    
-    "defaultValidation":"هذا الحقل مطلوب",
-    "passwordValidation":"من فضلك قم بادخال كلمة السر'",
-    "trueEmailValidation":"من فضلك قم بادخال بريد الكتروني صحيح",
-    "emailValidation":"من فضلك قم بادخال بريد الكتروني",
-    "hello":"مرحباً",
+    "verify": "تحقق",
+    "agree" : "اوافق",
+    "termsAndConditions": "الشروط والاحكام",
+    "iagree":" أوافق على",
+    "chooseProfileImage" : "الرجاء اختيار صورة للملف الشخصي",
+    "Gallery" : "معرض الصور",
+    "Camera" : "الكاميرا",
+    "ChooseImageSource" : "اختر مصدر الصورة",
+    "confirm_password": "تأكيد كلمة السر",
+    "checkPassword": "كلمة السر يجب أن تحتوي على 6 أحرف على الأقل\nتشمل حرف كبير، حرف صغير، و 6 أرقام",
+    "passwordDontMatch": "كلمة السر غير متطابقة",
+    "defaultValidation": "هذا الحقل مطلوب",
+    "passwordValidation": "من فضلك قم بادخال كلمة السر",
+    "trueEmailValidation": "من فضلك قم بادخال بريد الكتروني صحيح",
+    "emailValidation": "من فضلك قم بادخال بريد الكتروني",
+    "hello": "مرحباً",
     "alsalamealaykum": "السلام عليكم ورحمه الله وبركاته عيد فطر مبارك علينا وعليكم",
     "Admin": "أدمن سرعة التسويق",
     "adminsentyoumessage": "أرسل إليك الأدمن رسالة",
@@ -106,15 +116,14 @@
     "hello_fiesl": "ياهلا",
     "start_marketing": "أبدأ التسويق",
     "your_account_has_been_successfully_registered": "تم تسجيل حسابك بنجاح",
-    "accept_terms_and_conditions": "أوافق على الشروط والأحكام",
     "city": "المدينة",
     "phone": "رقم الهاتف",
     "profile_image": "صورة الملف الشخصى",
-    "account_registration": "تسجيل الحساب",
+    "account_registration": "تسجيل\nالحساب",
     "last_name": "الاسم الأخير",
     "first_name": "الاسم الأول",
     "second_name": "الاسم الثانى",
-    "confirm_password": "تأكيد كلمة السر الجديدة ",
+    "confirm_new_password": "تأكيد كلمة السر الجديدة ",
     "new_password": "كلمة السر الجديدة ",
     "email": "الأيميل",
     "password": "كلمة السر",
