--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,6 +1,17 @@
 {
-    "defaultValidation":"This field is required",
-    "passwordValidation":"Please enter your password",
+    "verify": "Verify",
+    "agree" : "Ok",
+    "termsAndConditions": "Terms and Conditions",
+    "iagree":"I agree to ",
+    "chooseProfileImage" : "Please choose a profile picture",
+    "Gallery" : "Gallery",
+    "Camera" : "Camera",
+    "ChooseImageSource" :"Choose Image Source",
+    "confirm_password": "Confirm Password",
+    "checkPassword" : "The password must contain at least 6 characters,\nincluding an uppercase letter,\na lowercase letter, and 6 numbers",
+    "passwordDontMatch": "Password does not match",
+    "defaultValidation": "This field is required",
+    "passwordValidation": "Please enter your password",
     "trueEmailValidation": "Please enter a valid email",
     "emailValidation": "Please enter an email",
     "alsalamealaykum": "Peace, mercy, and blessings of Allah be upon you. Eid Fitr Mubarak to you and us",
@@ -108,11 +119,11 @@
     "city": "City",
     "phone": "Phone Number",
     "profile_image": "Profile Image",
-    "account_registration": "Account Registration",
+    "account_registration": "sign Up",
     "last_name": "Last Name",
     "first_name": "First Name",
     "second_name": "Second Name",
-    "confirm_password": "Confirm New Password",
+    "confirm_new_password": "Confirm New Password",
     "new_password": "New Password",
     "email": "Email",
     "password": "Password",
