tr home view & enable switch lang from menu

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -113,7 +113,7 @@
     "text_in_home": "وريم إيبسوم(Lorem Ipsum) هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما قامت مطبعة مجهولة برص مجموعة من الأحرف بشكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة ",
     "start_promotion": "أبدأ الترويج",
     "fiesl": "فيصل",
-    "hello_fiesl": "ياهلا",
+    "hi": "ياهلا, ",
     "start_marketing": "أبدأ التسويق",
     "your_account_has_been_successfully_registered": "تم تسجيل حسابك بنجاح",
     "city": "المدينة",
