--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -112,7 +112,7 @@
     "text_in_home": "Lorem Ipsum is simply dummy text used in the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text since the 1500s...",
     "start_promotion": "Start Promotion",
     "fiesl": "Faisal",
-    "hello_fiesl": "Hello Faisal",
+    "hi": "Hello, ",
     "start_marketing": "Start Marketing",
     "your_account_has_been_successfully_registered": "Your account has been successfully registered",
     "accept_terms_and_conditions": "I accept the terms and conditions",
