--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "deleteaccount": "Delete Account" ,
     "verify": "Verify",
     "agree" : "Ok",
     "termsAndConditions": "Terms and Conditions",
