--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,8 @@
 {
+    "cancel": "الغاء",
+    "save" : "حفظ",
+    "left": "متبقى",
+    "6days": "6 يوم",
     "deleteaccount": "حذف الحساب",
     "verify": "تحقق",
     "agree" : "اوافق",
