--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,8 @@
 {
+    "cancel": "Cancel",
+    "save" : "Save",
+    "left": "Left",
+    "6days": "6 Days",
     "deleteaccount": "Delete Account" ,
     "verify": "Verify",
     "agree" : "Ok",
