--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "subcribetothepackage": "الأشتراك فى الباقة",
     "cancel": "الغاء",
     "save" : "حفظ",
     "left": "متبقى",
@@ -69,7 +70,7 @@
     "a_diamed": "ماسة",
     "remaining": "متبقى",
     "ended_at": "تنتهى فى",
-    "successfully_subscribed": " تم اشتراك فى الباقة بنجاح",
+    "successfully_subscribed": "تم اشتراك فى الباقة بنجاح",
     "pay": "أدفع",
     "an_amount_of_400_riyal_will_be_deducted_from_your_card": "سيتم خصم مبلغ 400 ريال من البطاقة",
     "cards": "بطاقاتى",
