--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "sar": "ر.س",
     "subcribetothepackage": "الأشتراك فى الباقة",
     "cancel": "الغاء",
     "save" : "حفظ",
@@ -64,7 +65,7 @@
     "purchaseInfo": "معلومات الشراء",
     "donePurchase": "تم الشراء بنجاح",
     "helloyou": "مرحبا بك",
-    "purchase_diamonds_with_in_the app": "شراء ماسات داخل التطبيق",
+    "purchase_diamonds_with_in_the_app": "شراء ماسات داخل التطبيق",
     "market_speed": "سرعة التسويق ",
     "purchase_Process": "عملية شراء",
     "a_diamed": "ماسة",
