tr chat & contact us

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -59,8 +59,8 @@
     "AddTelegramGroup": "إضافة القنوات التليجرام",
     "AddWhatsappGroup": "إضافة مجموعات الواتساب",
     "groups": "المجموعات",
-    "contactUsViaPhone": "اتصل بنا عبر الهاتف",
-    "contactUsViaWhatsapp": "اتصل بنا عبر الواتساب",
+    "contactUsViaPhone": "الأتصال عبر الهاتف",
+    "contactUsViaWhatsapp":"المحادثة عبر الواتساب",
     "40_saudi_riyal": "40 ريال سعودى",
     "purchaseInfo": "معلومات الشراء",
     "donePurchase": "تم الشراء بنجاح",
