--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -55,7 +55,7 @@
     "Addyourwhatsappgroup": "Add your WhatsApp group",
     "GroupLink": "Group Link",
     "GroupName": "Group Name",
-    "AddTelegramGroup": "Add Telegram Groups",
+    "AddTelegramGroup": "Add Telegram Channels",
     "AddWhatsappGroup": "Add WhatsApp Groups",
     "groups": "Groups",
     "contactUsViaPhone": "Contact us via phone",
