tr rest of menu drawer items

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -35,7 +35,7 @@
     "instagram": "انستغرام",
     "arabic": "عربى",
     "english": "الانجليزية",
-    "whatsapp": "واتساب",
+    "whatsapp": "واتس اب",
     "snapchat": "سناب شات",
     "TikTok": "تيك توك",
     "ouraccounts": "حسابتنا الرسمية",
@@ -45,6 +45,7 @@
     "WeHelpYou": "نساعدك فى بناء تجربتك مع سرعه التسويق ",
     "hearyouclearly": "نسمعك بوضوح",
     "AddSuggestion": "اضافة اقتراح",
+    "referralCodeCopied" : "تم نسخ كود الإحالة",
     "shareTheAppToEarn": "شارك التطبيق على 10 اشخاص  اربح 15 الماسة",
     "referralCode": "كود الإحالة",
     "shareAndEarn": "شارك واربح",
