--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -44,6 +44,7 @@
     "WeHelpYou": "We help you build your experience with Fast Marketing",
     "hearyouclearly": "We hear you clearly",
     "AddSuggestion": "Add Suggestion",
+    "referralCodeCopied" : "Referral code copied",
     "shareTheAppToEarn": "Share the app with 10 people and earn 15 diamonds",
     "referralCode": "Referral Code",
     "shareAndEarn": "Share and Earn",
