tr whatsapp view & add a suggestion view

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,19 +1,24 @@
 {
+    
+    "seeHowToSeeUseWatshapp" :"شاهد طريقة أستخدام الواتساب ؟",
+    "BarcodeScanning": "مسح الباركود",
+    "addWhatsAppNumber": "إضافة رقم الواتساب",
+    "pleaseSubscribeToThePackage": "الرجاء أشترك فى الباقة",
     "sar": "ر.س",
     "subcribetothepackage": "الأشتراك فى الباقة",
     "cancel": "الغاء",
-    "save" : "حفظ",
+    "save": "حفظ",
     "left": "متبقى",
     "6days": "6 يوم",
     "deleteaccount": "حذف الحساب",
     "verify": "تحقق",
-    "agree" : "اوافق",
+    "agree": "اوافق",
     "termsAndConditions": "الشروط والاحكام",
-    "iagree":" أوافق على",
-    "chooseProfileImage" : "الرجاء اختيار صورة للملف الشخصي",
-    "Gallery" : "معرض الصور",
-    "Camera" : "الكاميرا",
-    "ChooseImageSource" : "اختر مصدر الصورة",
+    "iagree": " أوافق على",
+    "chooseProfileImage": "الرجاء اختيار صورة للملف الشخصي",
+    "Gallery": "معرض الصور",
+    "Camera": "الكاميرا",
+    "ChooseImageSource": "اختر مصدر الصورة",
     "confirm_password": "تأكيد كلمة السر",
     "checkPassword": "كلمة السر يجب أن تحتوي على 6 أحرف على الأقل\nتشمل حرف كبير، حرف صغير، و 6 أرقام",
     "passwordDontMatch": "كلمة السر غير متطابقة",
@@ -45,7 +50,7 @@
     "WeHelpYou": "نساعدك فى بناء تجربتك مع سرعه التسويق ",
     "hearyouclearly": "نسمعك بوضوح",
     "AddSuggestion": "اضافة اقتراح",
-    "referralCodeCopied" : "تم نسخ كود الإحالة",
+    "referralCodeCopied": "تم نسخ كود الإحالة",
     "shareTheAppToEarn": "شارك التطبيق على 10 اشخاص  اربح 15 الماسة",
     "referralCode": "كود الإحالة",
     "shareAndEarn": "شارك واربح",
@@ -61,7 +66,7 @@
     "AddWhatsappGroup": "إضافة مجموعات الواتساب",
     "groups": "المجموعات",
     "contactUsViaPhone": "الأتصال عبر الهاتف",
-    "contactUsViaWhatsapp":"المحادثة عبر الواتساب",
+    "contactUsViaWhatsapp": "المحادثة عبر الواتساب",
     "40_saudi_riyal": "40 ريال سعودى",
     "purchaseInfo": "معلومات الشراء",
     "donePurchase": "تم الشراء بنجاح",
