--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,21 +1,25 @@
 {
+    "seeHowToSeeUseWatshapp" :"See how to use WhatsApp?",
+    "BarcodeScanning": "Barcode Scanning",
+    "addWhatsAppNumber": "Add WhatsApp number",
+    "pleaseSubscribeToThePackage": "Please subscribe to the package",
     "sar": "SAR",
     "subcribetothepackage": "Subscribe to the package",
     "cancel": "Cancel",
-    "save" : "Save",
+    "save": "Save",
     "left": "Left",
     "6days": "6 Days",
-    "deleteaccount": "Delete Account" ,
+    "deleteaccount": "Delete Account",
     "verify": "Verify",
-    "agree" : "Ok",
+    "agree": "Ok",
     "termsAndConditions": "Terms and Conditions",
-    "iagree":"I agree to ",
-    "chooseProfileImage" : "Please choose a profile picture",
-    "Gallery" : "Gallery",
-    "Camera" : "Camera",
-    "ChooseImageSource" :"Choose Image Source",
+    "iagree": "I agree to ",
+    "chooseProfileImage": "Please choose a profile picture",
+    "Gallery": "Gallery",
+    "Camera": "Camera",
+    "ChooseImageSource": "Choose Image Source",
     "confirm_password": "Confirm Password",
-    "checkPassword" : "The password must contain at least 6 characters,\nincluding an uppercase letter,\na lowercase letter, and 6 numbers",
+    "checkPassword": "The password must contain at least 6 characters,\nincluding an uppercase letter,\na lowercase letter, and 6 numbers",
     "passwordDontMatch": "Password does not match",
     "defaultValidation": "This field is required",
     "passwordValidation": "Please enter your password",
@@ -44,7 +48,7 @@
     "WeHelpYou": "We help you build your experience with Fast Marketing",
     "hearyouclearly": "We hear you clearly",
     "AddSuggestion": "Add Suggestion",
-    "referralCodeCopied" : "Referral code copied",
+    "referralCodeCopied": "Referral code copied",
     "shareTheAppToEarn": "Share the app with 10 people and earn 15 diamonds",
     "referralCode": "Referral Code",
     "shareAndEarn": "Share and Earn",
