tr scan QR views

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,5 +1,5 @@
 {
-    
+    "scanQR": "أمسح الباركود",
     "seeHowToSeeUseWatshapp" :"شاهد طريقة أستخدام الواتساب ؟",
     "BarcodeScanning": "مسح الباركود",
     "addWhatsAppNumber": "إضافة رقم الواتساب",
