--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "scanQR": "Scan the barcode",
     "seeHowToSeeUseWatshapp" :"See how to use WhatsApp?",
     "BarcodeScanning": "Barcode Scanning",
     "addWhatsAppNumber": "Add WhatsApp number",
