tr Whatsapp Choose detination & whatsapp page view & chats view

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,6 +1,18 @@
 {
+    "SelectAll" : "تحديد الكل",
+    "All":"الكل",
+    "ChooseAdestination(WhatsApp)": "أختر وجهة ( الواتساب )",
+    "WhatsAppchats": "دردشات الواتساب",
+    "chooseDestination": "اختر الوجهة",
+    "addLocation": "أضف الموقع",
+    "addLink": "أضف الرابط",
+    "writeyourmessage": "أكتب رسالتك...",
+    "chats": "الدردشات",
+    "delete": "حذف",
+    "Contacts": "دليل الهاتف",
+    "launchaddwithease": "أطلق إعلانك بكل سهولة",
     "scanQR": "أمسح الباركود",
-    "seeHowToSeeUseWatshapp" :"شاهد طريقة أستخدام الواتساب ؟",
+    "seeHowToSeeUseWatshapp": "شاهد طريقة أستخدام الواتساب ؟",
     "BarcodeScanning": "مسح الباركود",
     "addWhatsAppNumber": "إضافة رقم الواتساب",
     "pleaseSubscribeToThePackage": "الرجاء أشترك فى الباقة",
