--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,6 +1,18 @@
 {
+    "SelectAll" : "Select All",
+    "All":"All",
+    "WhatsAppchats": "WhatsApp chats",
+    "ChooseAdestination(WhatsApp)": "Choose a destination (WhatsApp)",
+    "chooseDestination": "Choose Destination",
+    "addLocation" : "Add Location",
+    "addLink": "Add Link",
+    "writeyourmessage": "Write your message...",
+    "chats": "Chats",
+    "delete": "Delete",
+    "Contacts": "Contacts",
+    "launchaddwithease": "Launch your ad with ease",
     "scanQR": "Scan the barcode",
-    "seeHowToSeeUseWatshapp" :"See how to use WhatsApp?",
+    "seeHowToSeeUseWatshapp": "See how to use WhatsApp?",
     "BarcodeScanning": "Barcode Scanning",
     "addWhatsAppNumber": "Add WhatsApp number",
     "pleaseSubscribeToThePackage": "Please subscribe to the package",
