tr launch ad whatsapp

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,6 +1,23 @@
 {
-    "SelectAll" : "تحديد الكل",
-    "All":"الكل",
+    "Deletedsuccessfully": "تم الحذف بنجاح",
+    "Delete the number of all:": "حذف عدد الكل :",
+    "Delete groups:": "حذف المجموعات :",
+    "Delete chats:": "حذف الدردشات :",
+    "deleting": "جاري الحذف",
+    "deleteChats": "حذف الدردشات",
+    "deleteGroups": "حذف المجموعات",
+    "deletaAll": "حذف الكل",
+    "Choosedestination(DeleteWhatsApp)": "أختر الوجهة (حذف الواتساب)",
+    "Allowednumberoftransmissions:": "العدد المسموح الأرسال:",
+    "Numberofclosedgroups:": "عدد المجموعات المغلقة :",
+    "NumbersOfContacts": "عدد الأرقام :",
+    "ChooseAdestination(Contacts)": "أختر وجهة (دليل الهاتف)",
+    "SentSuccessfully": "تم الارسال بنجاح",
+    "NumbersOfGroups": "عدد المجموعات :",
+    "NumbersOfChats": "عدد الدردشات :",
+    "sending": "جاري الارسال",
+    "SelectAll": "تحديد الكل",
+    "All": "الكل",
     "ChooseAdestination(WhatsApp)": "أختر وجهة ( الواتساب )",
     "WhatsAppchats": "دردشات الواتساب",
     "chooseDestination": "اختر الوجهة",
