--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,10 +1,27 @@
 {
-    "SelectAll" : "Select All",
-    "All":"All",
+    "Deletedsuccessfully": "Deleted successfully",
+    "Delete the number of all:": "Delete the number of all :",
+    "Delete groups:": "Delete groups :",
+    "Delete chats:": "Delete chats :",
+    "deleting": "Deleting...",
+    "deleteChats": "Delete Chats",
+    "deleteGroups": "Delete Groups",
+    "deletaAll": "Delete All",
+    "Choosedestination(DeleteWhatsApp)": "Choose destination (Delete WhatsApp)",
+    "Allowednumberoftransmissions:": "Allowed number of transmissions :",
+    "Numberofclosedgroups:": "Number of closed groups :",
+    "NumbersOfContacts": "Number of contacts :",
+    "ChooseAdestination(Contacts)": "Choose a destination (Contacts)",
+    "SentSuccessfully": "Sent successfully",
+    "NumbersOfGroups": "Number of groups :",
+    "NumbersOfChats": "Number of chats :",
+    "sending": "Sending...",
+    "SelectAll": "Select All",
+    "All": "All",
     "WhatsAppchats": "WhatsApp chats",
     "ChooseAdestination(WhatsApp)": "Choose a destination (WhatsApp)",
     "chooseDestination": "Choose Destination",
-    "addLocation" : "Add Location",
+    "addLocation": "Add Location",
     "addLink": "Add Link",
     "writeyourmessage": "Write your message...",
     "chats": "Chats",
