--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "AddWhatsAppgroups": "إضافة مجموعات الواتساب",
     "Numberlink": "رابط الرقم",
     "Thelinkhasbeencopied": "تم نسخ الرابط",
     "CreateWhatsApplink": "إنشاء رابط الواتساب",
