--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+     "AddWhatsAppgroups": "Add WhatsApp groups",
     "Numberlink": "Number link",
     "Thelinkhasbeencopied": "The link has been copied",
     "CreateWhatsApplink": "Create WhatsApp link",
