tr Launch Ad Choose Group Views

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,9 @@
 {
+    "Sendingtothenumbers:": "جارى الإرسال على الأرقام :",
+    "* The number allowed to be sent is 400 people only. Please charge more diamonds.": "* عدد المسموح الإرسال علية 400 شخص فقط برجاء شحن المزيد من الماسات",
+    "recharge": "إعادة الشحن",
+    "Chooseoneofthegroups": "أختار أحد المجموعات",
+    "Startmarketingyourproject!" : "ابدأ فى تسويق مشروعك!",
     "AddWhatsAppgroups": "إضافة مجموعات الواتساب",
     "Numberlink": "رابط الرقم",
     "Thelinkhasbeencopied": "تم نسخ الرابط",
