--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,5 +1,10 @@
 {
-     "AddWhatsAppgroups": "Add WhatsApp groups",
+    "Sendingtothenumbers:": "Sending to the numbers :",
+    "recharge": "Recharge",
+    "* The number allowed to be sent is 400 people only. Please charge more diamonds.": "* The number allowed to be sent is 400 people only. Please charge more diamonds.",
+    "Chooseoneofthegroups": "Choose one of the groups",
+    "Startmarketingyourproject!": "Start marketing your project!",
+    "AddWhatsAppgroups": "Add WhatsApp groups",
     "Numberlink": "Number link",
     "Thelinkhasbeencopied": "The link has been copied",
     "CreateWhatsApplink": "Create WhatsApp link",
