tr Whatsapp Groups Views

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,9 +1,13 @@
 {
+    "Joined": "منضم",
+    "add": "إضافة",
+    "Choose300groupsrandomly": "أختر 300 مجموعة بشكل عشوائى",
+    "Expandyoursalesrange": "وسع نطاق البيع",
     "Sendingtothenumbers:": "جارى الإرسال على الأرقام :",
     "* The number allowed to be sent is 400 people only. Please charge more diamonds.": "* عدد المسموح الإرسال علية 400 شخص فقط برجاء شحن المزيد من الماسات",
     "recharge": "إعادة الشحن",
     "Chooseoneofthegroups": "أختار أحد المجموعات",
-    "Startmarketingyourproject!" : "ابدأ فى تسويق مشروعك!",
+    "Startmarketingyourproject!": "ابدأ فى تسويق مشروعك!",
     "AddWhatsAppgroups": "إضافة مجموعات الواتساب",
     "Numberlink": "رابط الرقم",
     "Thelinkhasbeencopied": "تم نسخ الرابط",
@@ -12,7 +16,7 @@
     "chooseoneofthegroupsanditissenttoallnumbers": "أختار أحد المجموعات ويتم الإرسال على جميع الأرقام",
     "Addyourgroup(providefollowers)": "إضافة جروبك (زود المتابعين)",
     "ConvertthenumbertothedirectlinktoWhatsApp": "تحويل الرقم إلى رابط مباشر للواتس اب",
-    "day":"يوم",
+    "day": "يوم",
     "Deletedsuccessfully": "تم الحذف بنجاح",
     "Delete the number of all:": "حذف عدد الكل :",
     "Delete groups:": "حذف المجموعات :",
