--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,8 @@
 {
+    "Joined": "Joined",
+    "add": "Add",
+    "Choose300groupsrandomly": "Choose 300 groups randomly",
+    "Expandyoursalesrange": "Expand your sales range",
     "Sendingtothenumbers:": "Sending to the numbers :",
     "recharge": "Recharge",
     "* The number allowed to be sent is 400 people only. Please charge more diamonds.": "* The number allowed to be sent is 400 people only. Please charge more diamonds.",
