tr Telegram View

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "SeehowtouseTelegram?": "شاهد طريقة أستخدام التليجرام ؟",
+    "AddTelegramNumber": "إضافة رقم تليجرام",
     "Joined": "منضم",
     "add": "إضافة",
     "Choose300groupsrandomly": "أختر 300 مجموعة بشكل عشوائى",
