--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "SeehowtouseTelegram?": "See how to use Telegram?",
+    "AddTelegramNumber": "Add Telegram Number",
     "Joined": "Joined",
     "add": "Add",
     "Choose300groupsrandomly": "Choose 300 groups randomly",
@@ -170,7 +172,7 @@
     "profile": "Profile",
     "promotion_platforms": "Promotion Platforms",
     "text_in_home": "Lorem Ipsum is simply dummy text used in the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text since the 1500s...",
-    "start_promotion": "Start Promotion",
+    "sca_promotion": "Start Promotion",
     "fiesl": "Faisal",
     "hi": "Hello, ",
     "start_marketing": "Start Marketing",
