--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "TelegramChats": "دردشات تليجرام",
     "SeehowtouseTelegram?": "شاهد طريقة أستخدام التليجرام ؟",
     "AddTelegramNumber": "إضافة رقم تليجرام",
     "Joined": "منضم",
