--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "TelegramChats": "Telegram Chats",
     "SeehowtouseTelegram?": "See how to use Telegram?",
     "AddTelegramNumber": "Add Telegram Number",
     "Joined": "Joined",
