--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,8 @@
 {
+    "Chooseoneofthegroupsandsendtoallnumbers" : "أختر أحد المجموعات ويتم الإرسال على جميع الأرقام",
+    "TelegramChannels": "قنوات التليجرام",
+    "Addyourchannel(increasefollowers)": "اضافة قناتك (زيادة المتابعين)",
+    "ConvertthenumberintoadirectlinktoTelegram": "تحويل الرقم الى رابط مباشرة للتيليجرام",
     "TelegramChats": "دردشات تليجرام",
     "SeehowtouseTelegram?": "شاهد طريقة أستخدام التليجرام ؟",
     "AddTelegramNumber": "إضافة رقم تليجرام",
