--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,8 @@
 {
+    "Chooseoneofthegroupsandsendtoallnumbers": "Choose one of the channels and send to all numbers",
+    "TelegramChannels": "Telegram channels",
+    "Addyourchannel(increasefollowers)": "Add your channel (increase followers)",
+    "ConvertthenumberintoadirectlinktoTelegram": "Convert the number into a direct link to Telegram",
     "TelegramChats": "Telegram Chats",
     "SeehowtouseTelegram?": "See how to use Telegram?",
     "AddTelegramNumber": "Add Telegram Number",
