--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Chooseadestination(Telegram)": "أختر الوجهة (تيليجرام)",
     "Chooseoneofthegroupsandsendtoallnumbers" : "أختر أحد المجموعات ويتم الإرسال على جميع الأرقام",
     "TelegramChannels": "قنوات التليجرام",
     "Addyourchannel(increasefollowers)": "اضافة قناتك (زيادة المتابعين)",
