--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Chooseadestination(Telegram)": "Choose a destination (Telegram)",
     "Chooseoneofthegroupsandsendtoallnumbers": "Choose one of the channels and send to all numbers",
     "TelegramChannels": "Telegram channels",
     "Addyourchannel(increasefollowers)": "Add your channel (increase followers)",
