--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Createatelegramlink": "Create a Telegram link",
     "Chooseadestination(deleteTelegram)": "Choose a destination (Delete Telegram)",
     "Chooseadestination(Telegram)": "Choose a destination (Telegram)",
     "Chooseoneofthegroupsandsendtoallnumbers": "Choose one of the channels and send to all numbers",
