--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -2,7 +2,7 @@
     "Createatelegramlink": "إنشاء رابط التليجرام",
     "Chooseadestination(deleteTelegram)": "اختر الوجهة (حذف تيليجرام)",
     "Chooseadestination(Telegram)": "أختر الوجهة (تيليجرام)",
-    "Chooseoneofthegroupsandsendtoallnumbers" : "أختر أحد المجموعات ويتم الإرسال على جميع الأرقام",
+    "Chooseoneofthegroupsandsendtoallnumbers" : "أختر أحد القنوات ويتم الإرسال على جميع الأرقام",
     "TelegramChannels": "قنوات التليجرام",
     "Addyourchannel(increasefollowers)": "اضافة قناتك (زيادة المتابعين)",
     "ConvertthenumberintoadirectlinktoTelegram": "تحويل الرقم الى رابط مباشرة للتيليجرام",
