--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "ChannelName": "اسم القناة",
+    "channels": "القنوات",
     "Createatelegramlink": "إنشاء رابط التليجرام",
     "Chooseadestination(deleteTelegram)": "اختر الوجهة (حذف تيليجرام)",
     "Chooseadestination(Telegram)": "أختر الوجهة (تيليجرام)",
