--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "ChannelName": "Channel Name",
+    "channels": "Channels",
     "Createatelegramlink": "Create a Telegram link",
     "Chooseadestination(deleteTelegram)": "Choose a destination (Delete Telegram)",
     "Chooseadestination(Telegram)": "Choose a destination (Telegram)",
