tr Instagram View

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,7 @@
 {
+    "See how to use Instagram?": "شاهد طريقة أستخدام الانستغرام؟",
+    "log in": "دخول",
+    "username":"اسم المستخدم",
     "ChannelName": "اسم القناة",
     "channels": "القنوات",
     "Createatelegramlink": "إنشاء رابط التليجرام",
