--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,7 @@
 {
+    "See how to use Instagram?": "See how to use Instagram?",
+    "log in": "Log in",
+    "username": "Username",
     "ChannelName": "Channel Name",
     "channels": "Channels",
     "Createatelegramlink": "Create a Telegram link",
