--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,13 +1,16 @@
 {
+    "# Add hashtags": "#   إضافة الهشتاجات",
+    "Writeacomment": "اكتب تعليقاً.....",
+    "Attach a photo or video": "أرفق صوره أو مقطع فيديو",
     "See how to use Instagram?": "شاهد طريقة أستخدام الانستغرام؟",
     "log in": "دخول",
-    "username":"اسم المستخدم",
+    "username": "اسم المستخدم",
     "ChannelName": "اسم القناة",
     "channels": "القنوات",
     "Createatelegramlink": "إنشاء رابط التليجرام",
     "Chooseadestination(deleteTelegram)": "اختر الوجهة (حذف تيليجرام)",
     "Chooseadestination(Telegram)": "أختر الوجهة (تيليجرام)",
-    "Chooseoneofthegroupsandsendtoallnumbers" : "أختر أحد القنوات ويتم الإرسال على جميع الأرقام",
+    "Chooseoneofthegroupsandsendtoallnumbers": "أختر أحد القنوات ويتم الإرسال على جميع الأرقام",
     "TelegramChannels": "قنوات التليجرام",
     "Addyourchannel(increasefollowers)": "اضافة قناتك (زيادة المتابعين)",
     "ConvertthenumberintoadirectlinktoTelegram": "تحويل الرقم الى رابط مباشرة للتيليجرام",
@@ -99,7 +102,7 @@
     "Email": "الايميل",
     "sms": "رسائل نصية",
     "x": "اكس",
-    "instagram": "انستغرام",
+    "instagram": "انستجرام",
     "arabic": "عربى",
     "english": "الانجليزية",
     "whatsapp": "واتس اب",
