--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,7 @@
 {
+    "# Add hashtags": "# Add hashtags",
+    "Writeacomment": "Write a comment.....",
+    "Attach a photo or video": "Attach a photo or video",
     "See how to use Instagram?": "See how to use Instagram?",
     "log in": "Log in",
     "username": "Username",
