--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "Searchforhashtags": "ابحث عن الهاشتاج",
+    "You must type the hashtag in the search engine (#)": "يجب عليك كتابة الهاشتاج فى محرك البحث  ( # )",
     "# Add hashtags": "#   إضافة الهشتاجات",
     "Writeacomment": "اكتب تعليقاً.....",
     "Attach a photo or video": "أرفق صوره أو مقطع فيديو",
