--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "Searchforhashtags": "Search for hashtags",
+    "You must type the hashtag in the search engine (#)": "You must type the hashtag in the search engine (#)",
     "# Add hashtags": "# Add hashtags",
     "Writeacomment": "Write a comment.....",
     "Attach a photo or video": "Attach a photo or video",
