--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "ChooseapersonfromInstagramandsendyouradtoallhisfollowers": "أختر شخص من الإنستجرام ارسل اعلانك على جميع متابعينه",
+    "SendyouradonFollowersandfollowers": "أرسل إعلانك على المتابعين والمتابعون.",
     "Searchforhashtags": "ابحث عن الهاشتاج",
     "You must type the hashtag in the search engine (#)": "يجب عليك كتابة الهاشتاج فى محرك البحث  ( # )",
     "# Add hashtags": "#   إضافة الهشتاجات",
