--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "ChooseapersonfromInstagramandsendyouradtoallhisfollowers": "Choose a person from Instagram and send your ad to all his followers",
+    "SendyouradonFollowersandfollowers": "Send your ad on followers and followings",
     "Searchforhashtags": "Search for hashtags",
     "You must type the hashtag in the search engine (#)": "You must type the hashtag in the search engine (#)",
     "# Add hashtags": "# Add hashtags",
