--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,9 @@
 {
+    "Followers": "المتابعون",
+    "followings": "المتابعين",
+    "Numberoffollowings:": "عدد المتابعين:",
+    "Numberoffollowers:": "عدد المتابعون :",
+    "Choosedestination(Instagram)": "اختر الوجهة (انستغرام)",
     "ChooseapersonfromInstagramandsendyouradtoallhisfollowers": "أختر شخص من الإنستجرام ارسل اعلانك على جميع متابعينه",
     "SendyouradonFollowersandfollowers": "أرسل إعلانك على المتابعين والمتابعون.",
     "Searchforhashtags": "ابحث عن الهاشتاج",
