--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,9 @@
 {
+    "Followers": "Followers",
+    "followings": "Followings",
+    "Numberoffollowings:": "Number of followings :",
+    "Numberoffollowers:": "Number of followers :",
+    "Choosedestination(Instagram)": "Choose destination (Instagram)",
     "ChooseapersonfromInstagramandsendyouradtoallhisfollowers": "Choose a person from Instagram and send your ad to all his followers",
     "SendyouradonFollowersandfollowers": "Send your ad on followers and followings",
     "Searchforhashtags": "Search for hashtags",
