--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,8 @@
 {
+    "The number allowed to be sent is 400 people only. Please charge more diamonds.": "The number allowed to be sent is 400 people only. Please charge more diamonds.",
+    "Numberoffollowersandfollowings": "Number of followers and followings",
+    "Searchforaperson": "Search for a person",
+    "Searchforsomeonewhosentyouradtoallofhisfollowers": "Search for someone who sent your an ad to all of his followers",
     "Followers": "Followers",
     "followings": "Followings",
     "Numberoffollowings:": "Number of followings :",
