--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "SeehowtouseX?": "شاهد طريقة أستخدام X ؟",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "العدد المسموح الأرسال عليه 400 شخص فقط الرجاء شحن المزيد من الماسات",
     "Numberoffollowersandfollowings": "عدد المتابعون والمتابعين",
     "Searchforaperson": "بحث عن شخص",
