--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "SeehowtouseX?": "See how to use X?",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "The number allowed to be sent is 400 people only. Please charge more diamonds.",
     "Numberoffollowersandfollowings": "Number of followers and followings",
     "Searchforaperson": "Search for a person",
