--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,9 @@
 {
+    "Sendingon20trends:":"يتم الإرسال على 20 ترند :",
+    "Searchforxtrends": "ابحث عن ترندات X",
+    "Xtrendsareupdateddailywiththespeedofmarketing": "يتحدث ترندات X بشكل يومى مع سرعة التسويق",
+    "Publishyouradon5trends": "أنشر أعلانك على 5 ترندات X",
+    "addtrends": "#   إضافة ترند",
     "SeehowtouseX?": "شاهد طريقة أستخدام X ؟",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "العدد المسموح الأرسال عليه 400 شخص فقط الرجاء شحن المزيد من الماسات",
     "Numberoffollowersandfollowings": "عدد المتابعون والمتابعين",
