--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,9 @@
 {
+    "Sendingon20trends:": "Sending on 20 trends :",
+    "Searchforxtrends": "Search for X trends",
+    "Xtrendsareupdateddailywiththespeedofmarketing": "X trends are updated daily with the speed of marketing",
+    "Publishyouradon5trends": "Publish your ad on 5 trends X",
+    "addtrends": "# Add a trend",
     "SeehowtouseX?": "See how to use X?",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "The number allowed to be sent is 400 people only. Please charge more diamonds.",
     "Numberoffollowersandfollowings": "Number of followers and followings",
