--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,5 +1,6 @@
 {
-    "Sendingon20trends:":"يتم الإرسال على 20 ترند :",
+    "ChooseapersonfromXandsendyouradtoallhisfollowers": "أختر شخص من X ارسل اعلانك على جميع متابعينه",
+    "Sendingon20trends:": "يتم الإرسال على 20 ترند :",
     "Searchforxtrends": "ابحث عن ترندات X",
     "Xtrendsareupdateddailywiththespeedofmarketing": "يتحدث ترندات X بشكل يومى مع سرعة التسويق",
     "Publishyouradon5trends": "أنشر أعلانك على 5 ترندات X",
