--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Choosedestination(X)": "أختر الوجهة (X)",
     "ChooseapersonfromXandsendyouradtoallhisfollowers": "أختر شخص من X ارسل اعلانك على جميع متابعينه",
     "Sendingon20trends:": "يتم الإرسال على 20 ترند :",
     "Searchforxtrends": "ابحث عن ترندات X",
