--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Choosedestination(X)": "Choose destination (X)",
     "ChooseapersonfromXandsendyouradtoallhisfollowers": "Choose a person from X and send your ad to all his followers",
     "Sendingon20trends:": "Sending on 20 trends :",
     "Searchforxtrends": "Search for X trends",
