tr FacebookChooseDestinationView & sending

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Chooseadestination(Facebook)": "أختر الوجهة (فيسبوك)",
     "SeehowtouseFacebook?": "شاهد طريقة أستخدام الفيسبوك؟",
     "Choosedestination(X)": "أختر الوجهة (X)",
     "ChooseapersonfromXandsendyouradtoallhisfollowers": "أختر شخص من X ارسل اعلانك على جميع متابعينه",
