tr FacebookGroupsChooseDestinationView & sending

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "NumberofFacebookgroups": "عدد المجموعات فيسبوك",
+    "Chooseadestination(Facebook groups)": "أختر الوجهة (مجموعات فيسبوك)",
     "Chooseadestination(Facebook)": "أختر الوجهة (فيسبوك)",
     "SeehowtouseFacebook?": "شاهد طريقة أستخدام الفيسبوك؟",
     "Choosedestination(X)": "أختر الوجهة (X)",
