--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "NumberofFacebookgroups": "Number of Facebook groups",
+    "Chooseadestination(Facebook groups)": "Choose a destination (Facebook groups)",
     "Chooseadestination(Facebook)": "Choose a destination (Facebook)",
     "SeehowtouseFacebook?": "See how to use Facebook?",
     "Choosedestination(X)": "Choose destination (X)",
