tr FacbookDeleteGroupsChooseDestinationView & deleting view

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Choosedestination(deleteFacebook)": "إختر الوجهة (حذف فيسبوك)",
     "NumberofFacebookgroups": "عدد المجموعات فيسبوك",
     "Chooseadestination(Facebook groups)": "أختر الوجهة (مجموعات فيسبوك)",
     "Chooseadestination(Facebook)": "أختر الوجهة (فيسبوك)",
