--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Choosedestination(deleteFacebook)": "Choose destination (delete Facebook)",
     "NumberofFacebookgroups": "Number of Facebook groups",
     "Chooseadestination(Facebook groups)": "Choose a destination (Facebook groups)",
     "Chooseadestination(Facebook)": "Choose a destination (Facebook)",
